--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
         </div>
       
     </div>
-    <span class="cre">FROM THANG WITH LOVE <3</span>
+    <div class="cre">
+        FROM THANG WITH LOVE <3 <br>
+        Version 1.0
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js" integrity="sha512-Eezs+g9Lq4TCCq0wae01s9PuNWzHYoCMkE97e2qdkYthpI0pzC3UGB03lgEHn2XM85hDOUF6qgqqszs+iXU4UA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./script.js"></script>
     <script src="./anim.js"></script>
