--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="btn-voting">
+            <button>vote</button><p class="point"></p>
+        </div>
         <div class="volume-feature">
             <div class="volume-bar">
                 <input type="range" class="process-volume" name="volume" id="" value=0  min="0" max="100">
@@ -84,6 +87,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js" integrity="sha512-Eezs+g9Lq4TCCq0wae01s9PuNWzHYoCMkE97e2qdkYthpI0pzC3UGB03lgEHn2XM85hDOUF6qgqqszs+iXU4UA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./script.js"></script>
     <script src="./anim.js"></script>
-
+    <script src="./voting.js"></script>
 </body>
 </html>
