--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       
     </div>
     <div class="cre">
-        FROM THANG WITH LOVE <3 <br>
+        FROM THANG WITH LOVE &lt;3 <br>
         Version 1.2(test)
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
